samples/bed/should_fail/2_fields.bed
chr22	1000
chr22	2000
